objects/Response_PFQ__c.object
<CustomObject>
    <fields>
        <fullName>Q_Techniques_to_master__c</fullName>
        <description>Thinking about the challenges you face and the ENSI framework, what would you most like to master through your participation in the program?</description>
        <inlineHelpText>Thinking about the challenges you face and the ENSI framework, what would you most like to master through your participation in the program?</inlineHelpText>
        <label>Q Techniques to master</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Techniques_working__c</fullName>
        <description>Which ENSI techniques have been working for you?</description>
        <inlineHelpText>Which ENSI techniques have been working for you?</inlineHelpText>
        <label>Q Techniques working</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_What_have_they_achieved__c</fullName>
        <description>What have they (techniques used) achieved?</description>
        <inlineHelpText>What have they (techniques used) achieved?</inlineHelpText>
        <label>Q What have they achieved?</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Why_Enrol__c</fullName>
        <description>What has prompted you to enrol now?</description>
        <inlineHelpText>What has prompted you to enrol now?</inlineHelpText>
        <label>Q Why Enrol</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q__c</fullName>
        <description>How keen are you to participate in this workshop</description>
        <inlineHelpText>How keen are you to participate in this workshop</inlineHelpText>
        <label>Q How Keen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_apply_to_deal_with_these_difficulties__c</fullName>
        <description>What have you tried to apply to deal with these difficulties?</description>
        <inlineHelpText>What have you tried to apply to deal with these difficulties?</inlineHelpText>
        <label>Q apply to deal with these difficulties</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_response_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <label>Response PFQ</label>
    <nameField>
        <displayFormat>R-PFQ-{000000000}</displayFormat>
        <label>Response PFQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses PFQ</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>